# assinador

./: .env.development  .gitignore  DEPLOY_GUIDE.md  Dockerfile  MIGRATION_README.md  Makefile  NAVBAR_IMPLEMENTATION.md  PRODUCTION_SUMMARY.md  QUICK_START.md  README.md  SECURITY_FIXES.md  alembic.ini  app.py  asgi.py  async_db.py  async_queries.py  audit_logger.py  auth.py  check_system.bat  config.py  crypto_utils.py  deploy_static.ps1  docker-compose.yml  env_example.txt  forms.py  init_db.py  install.bat  install.sh  install_service.bat  install_uv.bat  install_uv.sh  main.py  mobile_optimizations.py  models.py  pdf_validator.py  pyproject.toml  query  remove_service.bat  remove_service.sh  requirements.txt  (+7 more)
alembic/: env.py
alembic/versions/: 3428989358d4_initial_schema_with_indexes.py  792010f37dfa_add_ldap_fields_to_user.py  9dac6f843a11_add_multi_signer_support.py  c4e40d0e1b19_make_password_hash_nullable.py  convert_ids_to_ulid.py
instance/: assinador.db
scripts/: __init__.py  download_static.ps1  download_static.sh  make_admin.py
services/: __init__.py  ad_sync_service.py  certificate_manager.py  ldap_service.py  pdf_validator.py
static/: README.md
static/css/: custom.css
static/js/: common.js
templates/: base.html  change_password.html  index.html  login.html  profile.html  validate.html
templates/admin/: audit_logs.html  cleanup.html  dashboard.html  document_types.html  edit_user.html  new_user.html  reports.html  settings.html  sync.html  users.html
templates/client/: confirm.html  list.html  select.html  sign.html  success.html
templates/internal/: cancelled.html  completed.html  edit_signature.html  pending.html  upload.html
templates/signature/: client_info.html  download.html  draw.html  pending.html  upload.html
utils/: __init__.py  crypto_utils.py  password_utils.py
