[project]
name = "assinaturas"
version = "0.1.0"
description = "Assinador rápido para PDFs usando Streamlit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "pypdf2>=3.0.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "asgiref>=3.9.1",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
