[project]
name = "assinador-pdf"
version = "2.0.0"
description = "Sistema de assinatura digital de PDFs com certificado X.509"
authors = [
    {name = "Desenvolvedor", email = "dev@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.0.0",
    "flask-migrate>=4.0.0",
    "flask-wtf>=1.1.1",
    "werkzeug>=3.0.0",
    "pypdf2>=3.0.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "asgiref>=3.9.1",
    "uvicorn[standard]>=0.35.0",
    "cryptography>=41.0.0",
    "pycryptodome>=3.19.0",
    "bcrypt>=4.0.1",
    "numpy>=2.0.2",
    "email-validator>=2.3.0",
    "psutil>=7.1.1",
    "ldap3>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/assinador_pdf"]
