[project]
name = "assinador-pdf"
version = "2.0.0"
description = "Sistema de assinatura digital de PDFs com certificado X.509"
authors = [
    {name = "Desenvolvedor", email = "dev@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.0.0",
    "flask-migrate>=4.0.0",
    "flask-wtf>=1.1.1",
    "werkzeug>=3.0.0",
    "pypdf2>=3.0.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "asgiref>=3.9.1",
    "uvicorn[standard]>=0.35.0",
    "cryptography>=41.0.0",
    "pycryptodome>=3.19.0",
    "bcrypt>=4.0.1",
    "numpy>=2.0.2",
    "email-validator>=1.3.1",
    "psutil>=5.9.0",
    "ldap3>=2.9.0",
    "flask-caching>=2.1.0",
    "flask-compress>=1.14",
    "flask-limiter>=3.5.0",
    "redis>=5.0.8",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
    "psycopg2>=2.9.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiofiles>=23.0.0",
    "aiocache>=0.12.0",
    "alembic>=1.13.0",
    "flask-talisman>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/assinador_pdf"]
